@@ -4,7 +4,8 @@ Changelog
 1.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- disable_plaintext_indexing and reenable_plaintext_indexing methods
+  [ebrehault]
 
 
 1.2 (2014-01-13)
